RESOLVED FIXED299288
[JSC] Suppprt `Promise.any` in async stack trace
https://bugs.webkit.org/show_bug.cgi?id=299288
Summary [JSC] Suppprt `Promise.any` in async stack trace
Sosuke Suzuki
Reported 2025-09-22 07:38:54 PDT
This patch changes async stack trace to support `Promise.any`.
Attachments
Sosuke Suzuki
Comment 1 2025-09-22 07:40:49 PDT
EWS
Comment 2 2025-09-26 22:37:46 PDT
Committed 300623@main (d9a997b3edaa): <https://commits.webkit.org/300623@main> Reviewed commits have been landed. Closing PR #51118 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-09-26 22:39:24 PDT
Radar WebKit Bug Importer
Comment 4 2025-09-26 22:39:25 PDT
Note You need to log in before you can comment on or make changes to this bug.