[JSC] Suppprt `Promise.any` in async stack trace https://bugs.webkit.org/show_bug.cgi?id=299288

Reviewed by Yusuke Suzuki.

This patch changes async stack trace to support `Promise.any`.

Test: JSTests/stress/async-stack-trace-promise-any-basic.js

Test: JSTests/stress/async-stack-trace-promise-any-basic.js
* JSTests/stress/async-stack-trace-promise-any-basic.js: Added.
(nop):
(shouldBe):
(testStack):
(async fine):
(async thrower):
(async run):
(i.const.aggregateError.shouldThrowAsync.async test):
(testStack.async task1):
(testStack.async task2):
(testStack.async task3):
(testStack.async run):
* Source/JavaScriptCore/builtins/PromiseConstructor.js:
(any):
* Source/JavaScriptCore/interpreter/Interpreter.cpp:
(JSC::Interpreter::getAsyncStackTrace):

Canonical link: https://commits.webkit.org/300623@main