Source/JavaScriptCore/interpreter/Interpreter.cpp
@@ -494,6 +494,15 @@ void Interpreter::getAsyncStackTrace(JSCell* owner, Vector<StackFrame>& results,
                     return generator;
             }
         }
+
+        // handle `Promise.any`
+        if (auto* contextPromise = jsDynamicCast<JSPromise*>(promiseContext)) {
+            if (JSValue parentContext = getContextValueFromPromise(contextPromise)) {
+                if (auto* generator = jsDynamicCast<JSGenerator*>(parentContext))
+                    return generator;
+            }
+        }
+
         return nullptr;
     };
 
